@@ -66,7 +66,7 @@ Depends: ${gir:Depends},
          ${misc:Depends},
          ${shlibs:Depends},
          evolution-data-server (>= 3.7.90),
-         gdm3 (>= 3.5.90),
+         gir1.2-gdm3 (>= 3.5.90),
          gir1.2-accountsservice-1.0,
          gir1.2-atspi-2.0 (>= 2.9.91),
          gir1.2-caribou-1.0 (>= 0.4.8),
@@ -100,7 +100,8 @@ Recommends: gkbd-capplet,
             gnome-contacts,
             gnome-control-center,
             gnome-user-guide,
-            unzip
+            unzip,
+            gdm3 (>= 3.5.90)
 Breaks: fglrx-driver (<< 1:11-10),
         gdm3 (<< 3.5.90),
         gnome-control-center (<< 1:3.0),
